# pulseboard

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  scanner.py  supervisord.conf
.github/workflows/: cd.yml
backend/: ble_scanner.py  database.py  hr_zones.py  main.py  models.py  scoring.py
backend/tests/: test_backend.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts  web-bluetooth.d.ts
frontend/src/components/: Admin.tsx  Dashboard.tsx  FullLeaderboard.tsx  HRDashboard.tsx  Leaderboard.tsx  LiveLeaderboard.tsx  PulseLogo.tsx  Register.tsx  UserCard.tsx
frontend/src/hooks/: useWebBluetooth.ts  useWebSocket.ts
tests/: test_scoring.py
