[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "pulseboard"
version = "0.1.0"
description = "Live fitness metrics dashboard — BLE heart rate & power from sport watches"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "aiosqlite>=0.21",
    "pydantic>=2.10",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[project.optional-dependencies]
ble = [
    "bleak>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.9",
    "bleak>=3.0",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
